--- a/src/main/resources/templates/recipe/all.html
+++ b/src/main/resources/templates/recipe/all.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/medovichkovv.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/medovichkovv.css">
+
     <!-- Bootstrap CSS -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
@@ -13,33 +17,35 @@
             integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
             crossorigin="anonymous"></script>
 
+    <script src="https://use.fontawesome.com/8770d7cd8b.js"></script>
+
     <meta charset="UTF-8">
     <title>Medovichkovv</title>
 </head>
-<body>
-<div class="panel-headng">
-    <h1>Добро пожаловать в Medovichkovv!</h1>
-    <h3>Самые вкусные тортики пекут здесь :)</h3>
+<body class="container-fluid" style="margin-top: 20px">
+<div class="panel-heading">
+    <h1>Мои рецепты</h1>
 </div>
-<h3></h3>
+<div>
+    <input class="btn btn btn-primary btn-index" type="button" value="На главную">
+</div>
 <table class="table table-hover">
     <thead>
-    <tr>
-        <th>Name</th>
-        <th>Is favorite</th>
-        <th>Privacy type</th>
-        <th>View recipe</th>
-    </tr>
+        <tr>
+            <th>Рецепт</th>
+            <th>Любимый рецепт</th>
+            <th>Видимость</th>
+            <th/>
+        </tr>
     </thead>
     <tbody>
-    <tr th:each="recipe : ${recipes}">
-        <td th:text="${recipe.name}"></td>
-        <td th:text="${recipe.favorite}"></td>
-        <td th:text="${recipe.privacyType}"></td>
-        <td><a href="#" th:href="@{'/recipe/' + ${recipe.id}}">View</a></td>
-    </tr>
+        <tr th:each="recipe : ${recipes}">
+            <td th:text="${recipe.name}"></td>
+            <td th:text="${recipe.favorite} ? 'да' : 'нет'"></td>
+            <td th:text="${recipe.privacyType.desc}"></td>
+            <td><a href="#" th:href="@{'/recipe/' + ${recipe.id}}" title="Просмотр"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+        </tr>
     </tbody>
 </table>
-
 </body>
 </html>
