--- a/src/main/resources/templates/recipe/recipe.html
+++ b/src/main/resources/templates/recipe/recipe.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/medovichkovv.js" type="text/javascript"></script>
+
     <!-- Bootstrap CSS -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
@@ -17,17 +20,20 @@
     <title>Medovichkovv</title>
 </head>
 <body>
+<div>
+    <input class="btn btn btn-primary btn-recipe" type="button" value="К рецептам">
+</div>
 
 <h2>Рецепт: <span th:text="${recipe.name}"></span></h2>
 
 <table name="components" class="table table-hover">
     <thead>
         <tr class="table-header">
-            <th>Name</th>
-            <th>Quantity</th>
-            <th>Cost</th>
-            <th>Type</th>
-            <th>Ingredients</th>
+            <th>Компонент</th>
+            <th>Количество</th>
+            <th>Стоимость</th>
+            <th>Тип</th>
+            <th>Ингредиенты:</th>
         </tr>
     </thead>
     <tbody>
@@ -35,15 +41,15 @@
             <td th:text="${componentDto.name}"></td>
             <td th:text="${componentDto.quantity}"></td>
             <td th:text="${componentDto.cost}"></td>
-            <td th:text="${componentDto.type}"></td>
+            <td th:text="${componentDto.type.desc}"></td>
             <td>
                 <table name="ingredients" class="table table-hover">
                     <thead>
                         <tr class="table-header">
-                            <th>Name</th>
-                            <th>Quantity</th>
-                            <th>Cost</th>
-                            <th>Type</th>
+                            <th>Ингредиент</th>
+                            <th>Количество</th>
+                            <th>Стоимость</th>
+                            <th>Тип</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -51,7 +57,7 @@
                             <td th:text="${ingredient.name}"></td>
                             <td th:text="${ingredient.weight}"></td>
                             <td th:text="${ingredient.cost}"></td>
-                            <td th:text="${ingredient.type}"></td>
+                            <td th:text="${ingredient.type.description}"></td>
                         </tr>
                     </tbody>
                 </table>
