--- a/src/main/resources/templates/recipe/all.html
+++ b/src/main/resources/templates/recipe/all.html
@@ -26,24 +26,35 @@
 <div class="panel-heading">
     <h1>Мои рецепты</h1>
 </div>
-<div>
-    <input class="btn btn btn-primary btn-index" type="button" value="На главную">
+<div class="row">
+    <div class="col-md-3 form-group">
+        <input class="btn btn-primary btn-index" type="button" value="На главную">
+    </div>
+    <div class="col-md-3 form-group">
+        <input class="btn btn-primary btn-recipe-new" type="button" value="Новый рецепт">
+    </div>
 </div>
 <table class="table table-hover">
     <thead>
         <tr>
             <th>Рецепт</th>
+            <th>Количество коржей</th>
+            <th>Площадь, см2</th>
             <th>Любимый рецепт</th>
             <th>Видимость</th>
+            <th/>
             <th/>
         </tr>
     </thead>
     <tbody>
         <tr th:each="recipe : ${recipes}">
             <td th:text="${recipe.name}"></td>
+            <td th:text="${recipe.cakes}"></td>
+            <td th:text="${recipe.square}"></td>
             <td th:text="${recipe.favorite} ? 'да' : 'нет'"></td>
             <td th:text="${recipe.privacyType.desc}"></td>
             <td><a href="#" th:href="@{'/recipe/' + ${recipe.id}}" title="Просмотр"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+            <td><a href="#" th:href="@{'/recipe/delete/' + ${recipe.id}}" title="Удалить"><i class="fa fa-times" aria-hidden="true"></i></a></td>
         </tr>
     </tbody>
 </table>
