--- a/src/main/resources/templates/recipe/recipe.html
+++ b/src/main/resources/templates/recipe/recipe.html
@@ -3,6 +3,7 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/medovichkovv.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/medovichkovv.css">
 
     <!-- Bootstrap CSS -->
     <!-- Latest compiled and minified CSS -->
@@ -16,55 +17,87 @@
             integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
             crossorigin="anonymous"></script>
 
+    <script src="https://use.fontawesome.com/8770d7cd8b.js"></script>
+
     <meta charset="UTF-8">
     <title>Medovichkovv</title>
 </head>
 <body>
 <div>
-    <input class="btn btn btn-primary btn-recipe" type="button" value="К рецептам">
+    <input class="btn btn-primary btn-recipe" type="button" value="К рецептам">
 </div>
 
 <h2>Рецепт: <span th:text="${recipe.name}"></span></h2>
 
+<div class="row">
+    <div class="col-md-3 form-group">
+        <input class="btn btn-primary btn-update-reсipe" type="button" value="Редактировать рецепт">
+    </div>
+    <div class="col-md-3 form-group">
+        <input class="btn btn-primary btn-new-component" type="button" value="Новый компонент...">
+        <input type="hidden" id="recipe-id" th:field="*{recipe.id}"/>
+    </div>
+</div>
+
 <table name="components" class="table table-hover">
     <thead>
-        <tr class="table-header">
-            <th>Компонент</th>
-            <th>Количество</th>
-            <th>Стоимость</th>
-            <th>Тип</th>
-            <th>Ингредиенты:</th>
-        </tr>
+    <tr class="table-header">
+        <th>Компонент</th>
+        <th>Количество</th>
+        <th>Стоимость</th>
+        <th>Тип</th>
+        <th>Ингредиенты:</th>
+        <th></th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-        <tr th:each="componentDto : ${recipe.componentDTOs}">
-            <td th:text="${componentDto.name}"></td>
-            <td th:text="${componentDto.quantity}"></td>
-            <td th:text="${componentDto.cost}"></td>
-            <td th:text="${componentDto.type.desc}"></td>
-            <td>
-                <table name="ingredients" class="table table-hover">
-                    <thead>
-                        <tr class="table-header">
-                            <th>Ингредиент</th>
-                            <th>Количество</th>
-                            <th>Стоимость</th>
-                            <th>Тип</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="ingredient : ${componentDto.recipeIngredientDTOS}">
-                            <td th:text="${ingredient.name}"></td>
-                            <td th:text="${ingredient.weight}"></td>
-                            <td th:text="${ingredient.cost}"></td>
-                            <td th:text="${ingredient.type.description}"></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </td>
-        </tr>
+    <tr th:each="componentDto : ${recipe.componentDTOs}">
+        <td th:text="${componentDto.name}"></td>
+        <td th:text="${componentDto.quantity}"></td>
+        <td th:text="${componentDto.cost}"></td>
+        <td th:text="${componentDto.type.desc}"></td>
+        <td>
+            <table name="ingredients" class="table table-hover">
+                <thead>
+                <tr class="table-header">
+                    <th>Ингредиент</th>
+                    <th>Количество</th>
+                    <th>Ед. изм.</th>
+                    <th>Стоимость</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="recipeIngredient : ${componentDto.recipeIngredientDTOS}">
+                    <td th:text="${recipeIngredient.ingredientDTO.name}"></td>
+                    <td th:text="${recipeIngredient.quantity}"></td>
+                    <td th:text="${recipeIngredient.ingredientDTO.type.description}"></td>
+                    <td th:text="${recipeIngredient.ingredientDTO.cost}"></td>
+                    <td><a href="#" th:href="@{'/recipe-ingr/update/' + ${recipeIngredient.id}}" title="Изменить">
+                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                    </td>
+                    <td><a href="#" th:href="@{'/recipe-ingr/delete/' + ${recipeIngredient.id} + '?recipeId=' + ${componentDto.recipeDtoId}}" title="Удалить">
+                        <i class="fa fa-times" aria-hidden="true"></i></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <div>
+                <input class="btn btn-primary" type="button" th:onclick="'javascript:goTo(\'/recipe-ingr/new?componentId=' + ${componentDto.id} + '&recipeId=' + ${componentDto.recipeDtoId} + '\'' + ')'" value="Новый ингредиент...">
+            </div>
+        </td>
+        <td><a href="#" th:href="@{'/component/update/' + ${componentDto.id}}" title="Изменить">
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+        <td><a href="#" th:href="@{'/component/delete/' + ${componentDto.id} + '?recipeId=' + ${componentDto.recipeDtoId}}" title="Удалить">
+            <i class="fa fa-times" aria-hidden="true"></i></a>
+        </td>
+    </tr>
     </tbody>
 </table>
-
+<div>
+    <h4>Стоимость рецепта, руб: <span th:text="${recipe.cost}"></span></h4>
+</div>
 </body>
 </html>
