--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -18,43 +18,50 @@
             crossorigin="anonymous"></script>
 
     <meta charset="UTF-8">
-    <title>Ingredient form</title>
+    <title>Recipe form</title>
 </head>
 <div>
-    <input class="btn btn-primary btn-ingredient" type="button" value="К ингредиентам">
+    <input class="btn btn-primary btn-current-recipe" type="button" value="К рецепту...">
 </div>
 <body class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form th:object="${ingredientDTO}" th:action="@{/ingredient/}" method="post">
-                <input type="hidden" th:field="*{id}"/>
+            <form th:object="${recipeDto}" th:action="@{/recipe/}" method="post">
+                <input id="recipe-id" type="hidden" th:field="*{id}"/>
+                <input type="hidden" th:field="*{userId}"/>
                 <div class="pannel-group">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h1 class="panel-title">Ингредиент</h1>
+                            <h1 class="panel-title">Рецепт</h1>
                         </div>
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-3 form-group">
+                                <div class="col-md-4 form-group">
                                     <label>Название</label>
                                     <input type="text" class="form-control" th:field="*{name}"/>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 form-group">
-                                    <label>Тип</label>
-                                    <select class="form-control" th:field="*{type}">
-                                        <option th:each="type : ${T(medovichkovvcalculationservice.enums.IngredientQtyType).values()}"
-                                                th:value="${type}" th:text="${type.description}"></option>
+                                <div class="col-md-4 form-group">
+                                    <label>Видимость</label>
+                                    <select class="form-control" th:field="*{privacyType}">
+                                        <option th:each="type : ${T(medovichkovvcalculationservice.enums.PrivacyType).values()}"
+                                                th:value="${type}" th:text="${type.desc}"></option>
                                     </select>
                                 </div>
-                                <div class="col-md-3 form-group">
-                                    <label>Вес</label>
-                                    <input type="number" step="0.01" class="form-control" th:field="*{weight}"/>
+                                <div class="col-md-4 form-group">
+                                    <label>Любимый рецепт</label>
+                                    <div>
+                                        <input type="checkbox" th:field="*{favorite}"/>
+                                    </div>
                                 </div>
-                                <div class="col-md-3 form-group">
-                                    <label>Стоимость</label>
-                                    <input type="number" step="0.01" class="form-control" th:field="*{cost}"/>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4 form-group">
+                                    <label>Количество коржей</label>
+                                    <input type="number" class="form-control" th:field="*{cakes}"/>
+                                </div>
+                                <div class="col-md-4 form-group">
+                                    <label>Площадь, см2</label>
+                                    <input type="number" step="0.01" class="form-control" th:field="*{square}"/>
                                 </div>
                             </div>
                         </div>
